package EStrore;

public class Address {
    private String cityName;
    private String countryName;
    private String houseNumber;
    private String streetName;
    private String state;



}

