package EStrore;

public class Admin extends User {


}
