package EStrore;

public class BillingInformation {
    private String cardOwnerName;
    private String phoneNumber;
    private Address billingAddress;
    private CreditCardInformation creditCardInformation;


}
