package EStrore;

public class CreditCardInformation {
    private String cardCvv;
    private int cardExpirationYear;
    private int cardExpirationMonth;
    private String creditCardNumber;
    private String nameOnCard;
    private CardType cardType;



}
