package EStrore;

import java.util.List;

public class Customer extends User {
    private List<BillingInformation> billingInformation;
    private ShoppingCart shoppingCart;


}
