package EStrore;

public class Item {
    private Product product;
    private int quantity;


}