package EStrore;

    public abstract class User {
        private int age;
        private String emailAddress;
        private Address homeAddress;
        private String name;
        private String password;
        private String phone;



}
